@@ -1,0 +1,6 @@
+/**
+ * Provides JMS Components support classes.
+ */
+@org.springframework.lang.NonNullApi
+@org.springframework.lang.NonNullFields
+package org.springframework.integration.jms.support;
